[project]
name = "ax-test-snippets"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests that test API endpoints",
    "scenario: Scenario tests that test full user workflows",
]
